[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
axum = "0.6.6"
tokio = {version = "1.25.0", features = ['full']}
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
comrak = "0.16.0"
katex = "0.4.5"
regex = "1.7.1"
tera = "1.17.1"
log = "0.4.17"
env_logger = "0.10.0"